# lab04-datasets-cpg

./: .buildinfo  .env.example  .gitattributes  .gitignore  .txt  COMMENT.md  PR_COMMENT_DRAFT.md  README.md  SECURITY.md  architecture.html  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  reflection.html  requirements.txt  search.html  searchindex.js  task1_repository.html  task2_parser.html  task3_kafka.html  task4_neo4j.html  task5_mongodb.html  task6_replay.html
.codex/: constitution.md
.github/: pr_comment_4.md
_sources/: task1_repository.ipynb  task2_parser.ipynb  task3_kafka.ipynb  task4_neo4j.ipynb  task5_mongodb.ipynb
book/: _config.yml  _toc.yml  architecture.md  index.md  reflection.md  task1_repository.ipynb  task1_repository.md  task2_parser.ipynb  task2_parser.md  task3_kafka.ipynb  task3_kafka.md  task4_neo4j.ipynb  task4_neo4j.md  task5_mongodb.ipynb  task5_mongodb.md  task6_replay.ipynb  task6_replay.md
data/: invalid_syntax.py
docs/: BigData_Lab04_Streaming.md  CONTRIBUTING.md  plan.md
kafka-connect/: Dockerfile
mongodb/: README.md  verification.js
neo4j/: cleanup_stale.cypher  constraints.cypher  sink_connector.json  verification.cypher
notebooks/: 01_repository_discovery.ipynb  02_parser_service.ipynb  03_kafka_topics.ipynb  04_neo4j_ingestion.ipynb  05_mongodb_metadata.ipynb  06_idempotent_replay.ipynb
openspec/: README.md
parser_service/: Dockerfile  __init__.py  ast_extractor.py  call_extractor.py  cfg_extractor.py  config.py  dfg_extractor.py  discover.py  ids.py  main.py  parser.py  producer.py  (+2 more)
(+162 files in other folders)
